# computacion-grafica-ucsp

./: .gitignore  readme.md
boing/: main.cpp
camera/: main.cpp
control/: main.cpp  matrix.cpp
coordinate_system/: main.cpp
example1/: main.cpp
example2/: main.cpp
house/: main.cpp
house_transform/: CMakeLists.txt  house_transform.cpp  main.cpp
rubik_cube/: cube.h  main.cpp  matrix.h  readme.md  rubik.h  seed_data.h  test.cpp
rubik_cube/cube/: cube.h  rubik.h  seed_data.h
rubik_cube/lib/: matrix.h  solver.h  utils.h
rubik_cube/solver/: .gitignore  app.js  fridrich.js  kociemba.js  package-lock.json  package.json
shaders/: 3.3.shader.vs  main.cpp
sphere/: CMakeLists.txt  main.cpp  readme.md  shader_cube.fs
sphere/classes/: Sphere.h
sphere/glfw/: main.cpp
sphere/src/: main.cpp
sphere_practice/: main.cpp  readme.md
sphere_practice/classes/: Icosphere.h  Sphere.cpp
sphere_practice/lib/: matrix.h
squad/: main.cpp
star/: main.cpp
star_solid/: main.cpp
star_transform/: main.cpp
texture_basic/: main.cpp
textures/: CMakeLists.txt  main.cpp
transform/: main.cpp
transform_multiple_objects/: CMakeLists.txt  figures.cpp  main.cpp  star.h  vector.cpp
